# Seance 01: Introduction
# - imGUI example
add_subdirectory(01_imGUIExample)
add_subdirectory(01_imGUIDemo)
# - draw 2 triangles (simplest example)
add_subdirectory(01_Triangles)
add_subdirectory(01_Triangles_OGL43)

# Seance 02: Position and Color
add_subdirectory(02_PositionAndColor)
add_subdirectory(02_PositionAndColor_ssbo)