# Seance 01: Introduction
# - imGUI example
add_subdirectory(01_imGUIExample)
add_subdirectory(01_imGUIDemo)
# - draw 2 triangles (simplest example)
add_subdirectory(01_Triangles)
add_subdirectory(01_Triangles_OGL43)

# Seance 02: Position and Color
add_subdirectory(02_PositionAndColor)
add_subdirectory(02_PositionAndColor_ssbo)

# Seance 03: Lighting No camera
add_subdirectory(03_LightingNoCamera)

# Seance 04: Transformations
# - simple transformation
add_subdirectory(04_Transformation)
# - comparaison with different animations
add_subdirectory(04_Animation)

# Seance 05: Geometrie
# - draw squares
add_subdirectory(05_DrawSquares)
# - geometry shader
add_subdirectory(05_GeometryShader)
# - tesselation teapot
add_subdirectory(05_TesselationTeapot)

# Lab 02: Picking
add_subdirectory(lab_02_Picking)

# Seance 06: Camera
# - Lighting with camera
add_subdirectory(06_LightingCamera)
# - Unproject 
add_subdirectory(06_Unproject)

# Seance 07: Intra

# Seance 08: Animation
# - Particule animation
add_subdirectory(08_Particules)

# Seance 09: Texture
# - Texture
add_subdirectory(09_Texture)
# - Texture bindless
add_subdirectory(09_Texture_bindless)

# Seance 10: Texture avancees
# - Normal mapping
add_subdirectory(10_NormalMap)
# - Sky 
add_subdirectory(10_Sky)
# - FBO
add_subdirectory(10_SimpleFBO)

# Seance 12: Shadow
# - Shadow map
add_subdirectory(12_ShadowMap)