cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(05_DrawSquares)

# Add source files
SET(SOURCE_FILES 
	Main.cpp
	Mainwindow.cpp)
set(HEADER_FILES 
	MainWindow.h)
set(SHADER_FILES 
	triangles.vert
	triangles.frag)

# Define the executable
add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${SHADER_FILES} ${SHARED_FILES})
target_compile_definitions(${PROJECT_NAME} PUBLIC SHADERS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/")

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})

# Define the link libraries
target_link_libraries(${PROJECT_NAME} ${LIBS})
